# personal-website

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
.github/workflows/: ai-review.yml
.vercel/output/: config.json
.vercel/output/functions/fn.func/: .vc-config.json
.vercel/output/static/: aboutMe.html  index.html  projects.html
.vercel/output/static/_app/: version.json
client/: App.svelte  app.css
client/components/: iconButton.svelte  nav.svelte  textButton.svelte
client/components/buttons/: borderButton.svelte  borderHref.svelte  githubButton.svelte  gitlabButton.svelte  iconButton.svelte  iconHref.svelte  linkedinButton.svelte
client/components/cards/: chatAppCard.svelte  standardCard.svelte  thisWebsiteCard.svelte
client/components/tags/: techTag.svelte
client/routes/: __layout.svelte  about-me.svelte  aboutMe.svelte  index.svelte  projects.svelte
design-files/: background.afdesign  color-scheme.afdesign
src/: app.css  main.rs
src-rust/: main.rs
src/components/: nav.svelte
src/components/buttons/: borderButton.svelte  borderHref.svelte  githubButton.svelte  gitlabButton.svelte  iconButton.svelte  iconHref.svelte  linkedinButton.svelte  textButton.svelte  textButtonSmall.svelte
src/components/cards/: standardCard.svelte
src/components/nav/: hamburgerNav.svelte  nav.svelte  verticalNav.svelte
src/components/tags/: techTag.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/aboutMe/: +page.svelte
src/routes/projects/: +page.svelte
(+43 files in other folders)
