[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
rocket_contrib = "0.4.10"
log = "0.4.17"